--- a/_posts/2020-08-25-thoughts.md
+++ b/_posts/2020-08-25-thoughts.md
@@ -1,13 +1,14 @@
 ---
 layout: post
-title:  "Some thoughts on position sizing"
-date:   2020-08-25
-excerpt: "Position sizing to squeeze out every bit of your edge"
-image: "/images/pic02.jpg"
+title:  "庚子年就这样开始了"
+date:   2021-01-01
+excerpt: "人生如棋，落子无悔"
+image: "/images/2021-01-01_pic_2"
 ---
 
-- 假设我们建立了一个数学模型来对股票未来某一段时间收益率做预测，即有f(X) = ret_hat
-- 假设模型有一定的预测能力(edge)
+新的一年又开始了，与往常并没有什么不同。抽时间把博客重新整理一下，争取今年能够多记录一些东西，这样明年回看现在，也许不会有虚度时光的负罪感。
 
-此时离赚钱还差最后一步，我们需要得到从预测值到交易执行的映射，即f(ret_hat) = trade(price, size, direction)
+二零二零年，没有犯太多错误，亦无多大成就。
+
+希望新的一年里继续做自己。
 
