--- a/_posts/2020-08-25-thoughts.md
+++ b/_posts/2020-08-25-thoughts.md
@@ -3,7 +3,7 @@ layout: post
 title:  "庚子年就这样开始了"
 date:   2021-01-01
 excerpt: "人生如棋，落子无悔"
-image: "/images/2021-01-01_pic_2.jpg"
+image: "/images/calendar.jpg"
 ---
 
 新的一年又开始了，与往常并没有什么不同。抽时间把博客重新整理一下，争取今年能够多记录一些东西，这样明年回看现在，也许不会有虚度时光的负罪感。
