--- a/_posts/2020-08-25-thoughts.md
+++ b/_posts/2020-08-25-thoughts.md
@@ -8,7 +8,7 @@ image: "/images/calendar.jpg"
 
 新的一年又开始了，与往常并没有什么不同。抽时间把博客重新整理一下，争取今年能够多记录一些东西，这样明年回看现在，也许不会有虚度时光的负罪感。
 
-二零二零年，没有犯太多错误，亦无多大成就。
+二零二零年，没犯太多错误，亦无多大成就。
 
 希望新的一年里继续做自己。
 
