--- a/_posts/2020-08-25-thoughts.md
+++ b/_posts/2020-08-25-thoughts.md
@@ -1,14 +1,17 @@
 ---
 layout: post
-title:  "庚子年就这样开始了"
-date:   2021-01-01
-excerpt: "人生如棋，落子无悔"
-image: "/images/calendar.jpg"
+title:  "庚子年以回撤开头"
+date:   2021-03-05
+excerpt: "写在策略连续亏损两周之后"
+image: "/images/the_big_short.jpg"
 ---
 
-新的一年又开始了，与往常并没有什么不同。抽时间把博客重新整理一下，争取今年能够多记录一些东西，这样明年回看现在，也许不会有虚度时光的负罪感。
+1. 亏损是加班的内在动力。
 
-二零二零年，没犯太多错误，亦无多大成就。
+2. 没想到，每只股票看着只亏一小点，几百只加起来，会让人怀疑自己的眼睛。
 
-希望新的一年里继续做自己。
+3. 成交概率，成交概率，还是成交概率。
 
+4. 世界上最遥远的距离，是实盘和回测的距离。
+
+5. 实盘不相信假设，回测要比实盘更严谨。
