--- a/_posts/2020-08-25-thoughts.md
+++ b/_posts/2020-08-25-thoughts.md
@@ -6,12 +6,6 @@ excerpt: "写在策略连续亏损两周之后"
 image: "/images/the_big_short.jpg"
 ---
 
-1. 亏损是加班的内在动力。
 
-2. 没想到，每只股票看着只亏一小点，几百只加起来，会让人怀疑自己的眼睛。
+- 成交概率，成交概率，还是成交概率。
 
-3. 成交概率，成交概率，还是成交概率。
-
-4. 世界上最遥远的距离，是实盘和回测的距离。
-
-5. 实盘不相信假设，回测要比实盘更严谨。
