--- a/_posts/2021-03-20-ML.md
+++ b/_posts/2021-03-20-ML.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Machine Learning for Quants - What are people trying to predict?"
 date:   2021-03-20
 excerpt: "The label matters more than the features."
-image: "/images/tml_trading.jpg"
+image: "/images/ml_trading.jpg"
 ---
 
 
