--- a/_posts/2021-03-20-ML.md
+++ b/_posts/2021-03-20-ML.md
@@ -16,8 +16,11 @@ image: "/images/ml_trading.jpg"
 
 只有搞明白这三个问题，我们才能将预测结果运用到实践中。我见过很多计算机背景的人想靠着自己的技术做量化交易，但大多数人其实连预测什么都没搞清楚。而机器学习在量化交易中早已不是用不用，而是用不用的好的问题：早在1995年就已经有人提出用RNN去拟合强化学习的价值函数来指导交易。如果说当时机器学习的发展还受到算力以及理论的制约，如今可以说是机器学习运用于量化交易的黄金时代。目前国内市场也有相应的产品出现：
 
-![Metabit Trading 1](/images/rl1.png#center) 
+![Metabit Trading 1](/images/rl1_.png#center)
 
-![Metabit Trading 2](/images/rl2.png#center) 
+![Metabit Trading 2](/images/rl2.png#center)
 
 当然，强化学习对大部分人来说还是屠龙术，能够将有监督学习做好实际上已经能很难很难。接下来我会以目前市面上出现过的金融类机器学习建模竞赛为例(99%都是有监督学习)，简单看一下究竟应该去预测什么。
+
+### 1. 未来收益预测
+
