--- a/_posts/2021-03-20-ML.md
+++ b/_posts/2021-03-20-ML.md
@@ -16,7 +16,7 @@ image: "/images/ml_trading.jpg"
 
 只有搞明白这三个问题，我们才能将预测结果运用到实践中。我见过很多计算机背景的人想靠着自己的技术做量化交易，但大多数人其实连预测什么都没搞清楚。而机器学习在量化交易中早已不是用不用，而是用不用的好的问题：早在1995年就已经有人提出用RNN去拟合强化学习的价值函数来指导交易。如果说当时机器学习的发展还受到算力以及理论的制约，如今可以说是机器学习运用于量化交易的黄金时代。目前国内市场也有相应的产品出现：
 
-![Metabit Trading 1](/images/rl1_.png#center)
+![Metabit Trading 1](/images/rl1_new.png#center)
 
 ![Metabit Trading 2](/images/rl2.png#center)
 
