--- a/_posts/2021-03-20-ML.md
+++ b/_posts/2021-03-20-ML.md
@@ -18,7 +18,7 @@ image: "/images/ml_trading.jpg"
 
 ![Metabit Trading 1](/images/rl1_new.png#center)
 
-![Metabit Trading 2](/images/rl2.png#center)
+![Metabit Trading 2](/images/rl2_new.png#center)
 
 当然，强化学习对大部分人来说还是屠龙术，能够将有监督学习做好实际上已经能很难很难。接下来我会以目前市面上出现过的金融类机器学习建模竞赛为例(99%都是有监督学习)，简单看一下究竟应该去预测什么。
 
